Affichage du camembert pour voirs ses depenses par catégories

--- a/app/src/main/res/layout/home_activity.xml
+++ b/app/src/main/res/layout/home_activity.xml
@@ -6,8 +6,15 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".HomeActivity"
+    android:padding="10dp"
     android:orientation="vertical"
     >
 
+    <com.github.mikephil.charting.charts.PieChart
+        android:id="@+id/camembert"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+    </com.github.mikephil.charting.charts.PieChart>
 
 </LinearLayout>
