possibilité de supprimer une depense, actualisation des donnes de l'activité, patch de quelque bug lors des suppresion+ ajout d'un appui long pour delete

--- a/app/src/main/res/layout/affichage_detailler_depense_activity.xml
+++ b/app/src/main/res/layout/affichage_detailler_depense_activity.xml
@@ -21,11 +21,62 @@
         android:textStyle="italic"
         />
 
+    <com.google.android.material.card.MaterialCardView
+        android:id="@+id/card_view_Affichage_Detailler"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:cardBackgroundColor="@color/card_background_color"
+        app:cardCornerRadius="8dp"
+        app:cardElevation="4dp"
+        app:cardUseCompatPadding="true">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:padding="16dp">
+
+            <TextView
+                android:id="@+id/card_title"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Title"
+                android:textColor="@color/card_title_color"
+                android:textSize="18sp"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/card_subtitle"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Subtitle"
+                android:textColor="@color/card_subtitle_color"
+                android:textSize="14sp" />
+
+
+        </LinearLayout>
+
+    </com.google.android.material.card.MaterialCardView>
+
+
     <ListView
         android:id="@+id/listeDepense"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:textSize="20dp"
         />
+
+    <TextView
+        android:id="@+id/hidden_id"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:visibility="gone" />
+
+    <TextView
+        android:id="@+id/depense_info"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceListItemSmall" />
+
 
 </LinearLayout>
