changement couleur card, changement phrases dans la affichageDepense + mise en place d'un id cacher dans l'affichage des dépense dans la liste

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,9 +7,9 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="card_background_color">#FFFFFFFF</color>
-    <color name="card_subtitle_color">#FF000000</color>
-    <color name="card_title_color">#FF000000</color>
+    <color name="card_background_color">#394264</color>
+    <color name="card_subtitle_color">#FFFFFFFF</color>
+    <color name="card_title_color">#FFFFFFFF</color>
 
     card_title_color
 
