--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -121,7 +121,6 @@
         android:text="Connexion"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editText_message"
-        />
+        app:layout_constraintTop_toBottomOf="@+id/editText_message" />
 
 </LinearLayout>
