--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,18 +10,16 @@
     >
 
 
-
-    <TextView
-        android:id="@+id/main_secondephrase"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+    <ImageView
+        android:id="@+id/connexion_logo"
+        android:layout_width="92dp"
+        android:layout_height="85dp"
         android:layout_gravity="center"
-        android:layout_marginTop="0dp"
+        android:layout_marginBottom="15dp"
         android:padding="8dp"
-        android:text="Saisissez vos informations?"
+        android:src="@drawable/logo_cashcontrol"
         android:textSize="20dp"
-        android:textStyle="italic"
-        />
+        android:textStyle="italic" />
 
     <EditText
         android:id="@+id/main_champ_identifiant"
@@ -29,7 +27,6 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp"
-        android:layout_marginTop="16dp"
         android:hint="Entrer votre identifiant"
         android:maxLength="25"
         />
@@ -87,7 +84,7 @@
     <ImageView
         android:id="@+id/image_user"
         android:layout_width="383dp"
-        android:layout_height="125dp"
+        android:layout_height="56dp"
         android:layout_marginStart="16dp"
         android:layout_marginLeft="16dp"
         android:layout_marginTop="21dp"
@@ -97,8 +94,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/ic_launcher_foreground"
-        tools:ignore="VectorDrawableCompat"
-        />
+        tools:ignore="VectorDrawableCompat" />
 
     <Button
         android:id="@+id/sauvegarde_compte"
@@ -112,15 +108,27 @@
         app:layout_constraintTop_toBottomOf="@+id/editText"
         />
 
-    <Button
-        android:id="@+id/main_connexion_users"
+
+    <TextView
+        android:id="@+id/connexion_text_view_inscription"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="150dp"
+        android:layout_marginLeft="75dp"
         android:layout_marginTop="10dp"
-        android:text="Connexion"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editText_message" />
+        android:layout_marginStart="16dp"
+        android:text="Si vous avez un compte, "
+        />
+
+    <TextView
+        android:id="@+id/connexion_text_view_connexion"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginLeft="75dp"
+        android:layout_marginTop="5dp"
+        android:layout_marginBottom="60dp"
+        android:clickable="true"
+        android:text="Se connecter"
+        android:textColor="@color/blue" />
 
 </LinearLayout>
