--- a/app/src/main/res/layout/home_activity.xml
+++ b/app/src/main/res/layout/home_activity.xml
@@ -10,10 +10,78 @@
     android:orientation="vertical"
     >
 
+    <com.google.android.material.appbar.AppBarLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="100dp"
+        >
+
+        <androidx.appcompat.widget.Toolbar
+            android:id="@+id/toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize"
+            android:background="@color/card_subtitle_color"
+            android:title="@string/app_name"
+            android:titleTextColor="@android:color/white" >
+
+            <Button
+                android:id="@+id/jour_button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Jour"
+                android:layout_marginRight="3dp"
+                android:textColor="@android:color/white"
+                android:backgroundTint="@color/bouton"
+                android:layout_gravity="start"/>
+            <Button
+                android:id="@+id/semaine_button"
+                android:layout_margin="3dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Semaine"
+                android:textColor="@android:color/white"
+                android:backgroundTint="@color/bouton"
+                android:layout_gravity="start"/>
+            <Button
+                android:id="@+id/mois_button"
+                android:layout_margin="3dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Mois"
+                android:textColor="@android:color/white"
+                android:backgroundTint="@color/bouton"
+                android:layout_gravity="start"/>
+            <Button
+                android:id="@+id/annee_button"
+                android:layout_margin="3dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Année"
+                android:backgroundTint="@color/bouton"
+                android:textColor="@android:color/white"
+                android:layout_gravity="start"/>
+
+        </androidx.appcompat.widget.Toolbar>
+
+    </com.google.android.material.appbar.AppBarLayout>
+
+    <!-- Le reste de votre mise en page -->
+
+    <EditText
+        android:id="@+id/date_picker"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:focusable="false"
+        android:inputType="none"
+        android:drawableStart="@drawable/baseline_today_24"
+        android:drawableTint="@color/blue"
+        android:drawablePadding="15dp" />
+
     <com.github.mikephil.charting.charts.PieChart
         android:id="@+id/camembert"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        >
 
     </com.github.mikephil.charting.charts.PieChart>
 
