--- a/app/src/main/res/layout/ajout_depense_activity.xml
+++ b/app/src/main/res/layout/ajout_depense_activity.xml
@@ -13,9 +13,10 @@
 
     <com.google.android.material.card.MaterialCardView
         android:id="@+id/card_view_Affichage_Detailler"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_width="400dp"
+        android:layout_height="700dp"
         app:cardBackgroundColor="@color/card_background_color"
+        android:layout_marginTop="100dp"
         app:cardCornerRadius="8dp"
         app:cardElevation="4dp"
         app:cardUseCompatPadding="true">
@@ -26,61 +27,80 @@
             android:orientation="vertical"
             android:padding="16dp">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Catégorie"
-        android:textSize="16sp"
-        android:textColor="@android:color/black"
-        />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Catégorie"
+                android:textSize="16sp"
+                android:textColor="@android:color/white"
+                />
 
-    <Spinner
-        android:id="@+id/category_spinner"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:entries="@array/category_list"
-        android:prompt="@string/select_category"
-        />
+            <Spinner
+                android:id="@+id/category_spinner"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:entries="@array/category_list"
+                android:prompt="@string/select_category"
+                android:textColor="@android:color/white"
+                />
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Montant"
-        android:textSize="16sp"
-        android:textColor="@android:color/black"
-        />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Montant"
+                android:textSize="16sp"
+                android:textColor="@android:color/white"
+                />
 
-    <EditText
-        android:id="@+id/edittext_montant_depense"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:inputType="numberDecimal"
-        android:hint="0.00"
-        />
+            <EditText
+                android:id="@+id/edittext_montant_depense"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:inputType="numberDecimal"
+                android:hint="0.00"
+                />
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Description"
-        android:textSize="16sp"
-        android:textColor="@android:color/black"
-        />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Description"
+                android:textSize="16sp"
+                android:textColor="@android:color/white"
+                />
 
-    <EditText
-        android:id="@+id/edittext_description_depense"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:inputType="textAutoCorrect"
-        android:hint="Description"
-        />
+            <EditText
+                android:id="@+id/edittext_description_depense"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:inputType="textAutoCorrect"
+                android:hint="Description"
+                />
 
-    <Button
-        android:id="@+id/button_ajout_depense"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Ajouter"
-        android:layout_gravity="center_horizontal"
-        />
+            <ImageView
+                android:id="@+id/image_depense"
+                android:layout_width="345dp"
+                android:layout_height="236dp"
+                android:layout_marginTop="20dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:srcCompat="@drawable/ic_launcher_foreground"
+                tools:ignore="VectorDrawableCompat" />
+            <Button
+                android:id="@+id/button_prendre_photo"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Prendre une Photo"
+                android:layout_gravity="center_horizontal"
+                />
+            <Button
+                android:id="@+id/button_ajout_depense"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="40dp"
+                android:text="Ajouter"
+                android:layout_gravity="center_horizontal"
+                />
 
         </LinearLayout>
 
