--- a/app/src/main/res/layout/affichage_changement_depense.xml
+++ b/app/src/main/res/layout/affichage_changement_depense.xml
@@ -25,7 +25,7 @@
         android:id="@+id/card_view_Affichage_Detailler"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:cardBackgroundColor="@color/card_background_color"
+        app:cardBackgroundColor="@color/space"
         app:cardCornerRadius="8dp"
         app:cardElevation="4dp"
         app:cardUseCompatPadding="true">
@@ -71,7 +71,7 @@
         android:layout_height="70dp"
         android:layout_margin="50dp"
         android:text="Sauvegarder"
-        android:backgroundTint="@color/bouton"
+        android:backgroundTint="@color/black"
         ></Button>
 
 
