--- a/app/src/main/res/layout/affichage_detailler_depense_activity.xml
+++ b/app/src/main/res/layout/affichage_detailler_depense_activity.xml
@@ -25,7 +25,7 @@
         android:id="@+id/card_view_Affichage_Detailler"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:cardBackgroundColor="@color/card_background_color"
+        app:cardBackgroundColor="@color/space"
         app:cardCornerRadius="8dp"
         app:cardElevation="4dp"
         app:cardUseCompatPadding="true">
@@ -41,7 +41,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Title"
-                android:textColor="@color/card_title_color"
+                android:textColor="@color/grey"
                 android:textSize="18sp"
                 android:textStyle="bold" />
 
@@ -50,7 +50,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Subtitle"
-                android:textColor="@color/card_subtitle_color"
+                android:textColor="@color/space"
                 android:textSize="14sp" />
 
 
