--- a/app/src/main/res/layout/ajout_depense_activity.xml
+++ b/app/src/main/res/layout/ajout_depense_activity.xml
@@ -13,16 +13,16 @@
 
     <com.google.android.material.card.MaterialCardView
         android:id="@+id/card_view_Affichage_Detailler"
-        android:layout_width="400dp"
-        android:layout_height="700dp"
-        app:cardBackgroundColor="@color/card_background_color"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:cardBackgroundColor="@color/space"
         android:layout_marginTop="50dp"
         app:cardCornerRadius="8dp"
         app:cardElevation="4dp"
         app:cardUseCompatPadding="true">
 
         <LinearLayout
-            android:layout_width="389dp"
+            android:layout_width="393dp"
             android:layout_height="658dp"
             android:orientation="vertical"
             android:padding="16dp">
@@ -31,7 +31,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Catégorie"
-                android:textColor="@android:color/white"
+                android:textColor="@color/grey"
                 android:textSize="16sp" />
 
             <Spinner
@@ -46,7 +46,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Montant"
-                android:textColor="@android:color/white"
+                android:textColor="@color/grey"
                 android:textSize="16sp" />
 
             <EditText
@@ -60,7 +60,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Description"
-                android:textColor="@android:color/white"
+                android:textColor="@color/grey"
                 android:textSize="16sp" />
 
             <EditText
@@ -76,8 +76,9 @@
                 android:layout_height="wrap_content"
                 android:drawableStart="@drawable/baseline_today_24"
                 android:drawablePadding="15dp"
-                android:drawableTint="@color/blue"
+                android:drawableTint="@color/bleuGris"
                 android:focusable="false"
+
                 android:inputType="none" />
 
 
@@ -97,6 +98,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
+                android:backgroundTint="@color/black"
                 android:text="Prendre une Photo" />
 
             <Button
@@ -104,6 +106,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
+                android:backgroundTint="@color/black"
                 android:layout_marginTop="40dp"
                 android:text="Ajouter" />
 
