--- a/app/src/main/res/layout/navbar_cash_control.xml
+++ b/app/src/main/res/layout/navbar_cash_control.xml
@@ -18,7 +18,7 @@
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
-        android:background="@color/card_subtitle_color"
+        android:background="@color/space"
         android:title="@string/app_name"
         android:titleTextColor="@android:color/white" >
 
@@ -29,7 +29,7 @@
             android:text="Jour"
             android:layout_margin="3dp"
             android:textColor="@android:color/white"
-            android:backgroundTint="@color/bouton"
+            android:backgroundTint="@color/bleuUnPeuClair"
             android:layout_gravity="start"/>
         <Button
             android:id="@+id/semaine_button"
@@ -38,7 +38,7 @@
             android:layout_height="wrap_content"
             android:text="Semaine"
             android:textColor="@android:color/white"
-            android:backgroundTint="@color/bouton"
+            android:backgroundTint="@color/bleuUnPeuClair"
             android:layout_gravity="start"/>
         <Button
             android:id="@+id/mois_button"
@@ -47,7 +47,7 @@
             android:layout_height="wrap_content"
             android:text="Mois"
             android:textColor="@android:color/white"
-            android:backgroundTint="@color/bouton"
+            android:backgroundTint="@color/bleuUnPeuClair"
             android:layout_gravity="start"/>
         <Button
             android:id="@+id/annee_button"
@@ -55,7 +55,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Année"
-            android:backgroundTint="@color/bouton"
+            android:backgroundTint="@color/bleuUnPeuClair"
             android:textColor="@android:color/white"
             android:layout_gravity="start"/>
     </androidx.appcompat.widget.Toolbar>
