--- a/app/src/main/res/layout/affichage_changement_depense.xml
+++ b/app/src/main/res/layout/affichage_changement_depense.xml
@@ -24,46 +24,105 @@
     <com.google.android.material.card.MaterialCardView
         android:id="@+id/card_view_Affichage_Detailler"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         app:cardBackgroundColor="@color/space"
+        android:layout_marginTop="50dp"
         app:cardCornerRadius="8dp"
         app:cardElevation="4dp"
         app:cardUseCompatPadding="true">
 
         <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_width="393dp"
+            android:layout_height="658dp"
             android:orientation="vertical"
             android:padding="16dp">
 
-            <EditText
-                android:id="@+id/card_description"
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Catégorie"
+                android:textColor="@color/grey"
+                android:textSize="16sp" />
+
+            <Spinner
+                android:id="@+id/category_spinner"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textColor="@color/card_title_color"
-                android:textSize="18sp"
-                android:textStyle="bold" />
+                android:entries="@array/category_list"
+                android:prompt="@string/select_category"
+                android:textColor="@android:color/white" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Montant"
+                android:textColor="@color/grey"
+                android:textSize="16sp" />
 
             <EditText
-                android:id="@+id/card_prix"
+                android:id="@+id/edittext_montant_depense"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textColor="@color/card_subtitle_color"
-                android:textSize="14sp"
-                android:inputType="phone"/>
+                android:hint="0.00"
+                android:inputType="numberDecimal" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Description"
+                android:textColor="@color/grey"
+                android:textSize="16sp" />
 
             <EditText
-                android:id="@+id/card_date"
+                android:id="@+id/edittext_description_depense"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textColor="@color/card_subtitle_color"
-                android:textSize="14sp" />
+                android:hint="Description"
+                android:inputType="textAutoCorrect" />
 
+            <EditText
+                android:id="@+id/date_picker_depense"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:drawableStart="@drawable/baseline_today_24"
+                android:drawablePadding="15dp"
+                android:drawableTint="@color/bleuGris"
+                android:focusable="false"
+
+                android:inputType="none" />
+
+
+            <ImageView
+                android:id="@+id/image_depense"
+                android:layout_width="345dp"
+                android:layout_height="236dp"
+                android:layout_marginTop="20dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:srcCompat="@drawable/ic_launcher_foreground"
+                tools:ignore="VectorDrawableCompat" />
+
+            <Button
+                android:id="@+id/button_prendre_photo"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:backgroundTint="@color/black"
+                android:text="Prendre une Photo" />
+
+            <Button
+                android:id="@+id/button_ajout_depense"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:backgroundTint="@color/black"
+                android:layout_marginTop="40dp"
+                android:text="Modifier" />
 
         </LinearLayout>
 
     </com.google.android.material.card.MaterialCardView>
-
 
     <Button
         android:id="@+id/button_sauvegarder"
