--- a/app/src/main/res/layout/affichage_detailler_depense_activity.xml
+++ b/app/src/main/res/layout/affichage_detailler_depense_activity.xml
@@ -50,7 +50,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Subtitle"
-                android:textColor="@color/space"
+                android:textColor="@color/grey"
                 android:textSize="14sp" />
 
 
