patch de bug du code + suppression de la redondance de code + clean de tous le code

--- a/app/src/main/res/layout/affichage_changement_depense.xml
+++ b/app/src/main/res/layout/affichage_changement_depense.xml
@@ -132,7 +132,7 @@
                 android:layout_gravity="center_horizontal"
                 android:backgroundTint="@color/black"
                 android:layout_marginTop="40dp"
-                android:text="Modifier" />
+                android:text="Enregistrer" />
 
         </LinearLayout>
 
