--- a/app/src/main/res/layout/ajout_depense_activity.xml
+++ b/app/src/main/res/layout/ajout_depense_activity.xml
@@ -44,14 +44,29 @@
                 android:textColor="@color/grey"
                 android:textSize="16sp" />
 
-            <Spinner
-                android:id="@+id/category_spinner"
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:entries="@array/category_list"
-                android:prompt="@string/select_category"
-                android:textColor="@android:color/white" />
+                android:orientation="horizontal"
+                android:gravity="center_vertical">
+                <Spinner
+                    android:id="@+id/category_spinner"
+                    android:layout_width="280dp"
+                    android:layout_height="wrap_content"
+                    android:entries="@array/category_list"
+                    android:prompt="@string/select_category"
+                    android:textColor="@android:color/white" />
 
+                <Button
+                    android:id="@+id/button_lire_categorie"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Lire"
+                    android:textSize="16sp"
+                    android:backgroundTint="@color/black"
+                    android:textColor="@android:color/white"
+                    />
+            </LinearLayout>
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -73,13 +88,30 @@
                 android:textColor="@color/grey"
                 android:textSize="16sp" />
 
-            <EditText
-                android:id="@+id/edittext_description_depense"
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="Description"
-                android:inputType="textAutoCorrect" />
+                android:orientation="horizontal"
+                android:gravity="center_vertical">
 
+                <EditText
+                    android:id="@+id/edittext_description_depense"
+                    android:layout_width="280dp"
+                    android:layout_height="wrap_content"
+                    android:hint="Description"
+                    android:inputType="textAutoCorrect" />
+
+                <Button
+                    android:id="@+id/button_lire_description"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Lire"
+                    android:textSize="16sp"
+                    android:backgroundTint="@color/black"
+                    android:textColor="@android:color/white"
+
+                    />
+            </LinearLayout>
             <EditText
                 android:id="@+id/date_picker_depense"
                 android:layout_width="match_parent"
