--- a/app/src/main/res/layout/activity_inscription.xml
+++ b/app/src/main/res/layout/activity_inscription.xml
@@ -52,7 +52,7 @@
         android:layout_marginTop="16dp"
         android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp"
-        android:hint="Entrer votre numéro de teléphone"
+        android:hint="Numéro de teléphone format: 06 11 22 33 44"
         android:inputType="phone"
         android:maxLength="10"
         />
